--- a/login.html
+++ b/login.html
@@ -11,8 +11,8 @@
         <div class="login-box">
             <h1>User Login</h1>
             <form method="POST" action="/dologin">
-                <input class="full-width" type="text" name="username" placeholder="User Name(Default: admin)" required /><br />
-                <input class="full-width" type="password" name="password" placeholder="Password(Default: admin)" /><br />
+                <input class="full-width" type="text" name="ui_username" placeholder="User Name(Default: admin)" required /><br />
+                <input class="full-width" type="password" name="ui_password" placeholder="Password(Default: admin)" required /><br />
                 <input class="full-width button blue" style="margin-top:3px" type="submit" value="Login"/>
             </form>
         </div>
