--- a/login.html
+++ b/login.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="Pastgift jiagouyun.com">
-        <link href="/css/login.css" rel="stylesheet">
+        <link href="/css/auth.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
         <div class="login-box">
@@ -13,7 +14,7 @@
             <form method="POST" action="/dologin">
                 <input class="full-width" type="text" name="ui_username" placeholder="User Name(Default: admin)" required /><br />
                 <input class="full-width" type="password" name="ui_password" placeholder="Password(Default: admin)" required /><br />
-                <input class="full-width button blue" style="margin-top:3px" type="submit" value="Login"/>
+                <input class="btn btn-large btn-block btn-primary btn-info" style="margin-top:3px" type="submit" value="Login"/>
             </form>
         </div>
     </body>
