--- a/password.html
+++ b/password.html
@@ -5,7 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="">
         <meta name="author" content="Pastgift jiagouyun.com">
-        <link href="/css/login.css" rel="stylesheet">
+        <link href="/css/auth.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.css" rel="stylesheet">
     </head>
     <body>
         <div class="login-box">
@@ -17,7 +18,7 @@
                 <input class="full-width" type="text" name="ui_newusername" placeholder="New User Name" required /><br />
                 <input class="full-width" type="password" name="ui_newpassword" placeholder="New Password" required /><br />
                 <input class="full-width" type="password" name="ui_newpassword2" placeholder="Repeat New Password" required /><br />
-                <input class="full-width button blue" style="margin-top:3px" type="submit" value="Change Password"/>
+                <input class="btn btn-large btn-block btn-primary btn-warning" style="margin-top:3px" type="submit" value="Change Password"/>
             </form>
         </div>
     </body>
