fix for merging

--- a/index.html
+++ b/index.html
@@ -53,6 +53,6 @@
     <div ng-include="template" ng-controller="FooterController"></div>
 </div>
 
-
+<a class="btn btn-large btn-block btn-primary btn-warning" href="/password.html">Change Password</a>
 </body>
 </html>
