--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <meta name="description" content="">
         <meta name="author" content="Pastgift jiagouyun.com">
         <link href="/css/auth.css" rel="stylesheet">
-        <link href="assets/css/bootstrap.css" rel="stylesheet">
+        <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
         <div class="login-box">
